JS Automation Code

--- a/src/main/webapp/source/scripts/modules/upload/components/music-owner-information-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-owner-information-form.template.html
@@ -123,7 +123,7 @@
     <hr/>
 
     <div class="form-group">
-        <label for="pbo" class="col-xs-3">PBO</label>
+        <label for="pbo" class="col-xs-3">PRO</label>
         <div class="col-xs-9">
             <input type="text" class="form-control" name="pbo" id="pbo" ng-model="ctrl.data.pbo">
         </div>
@@ -133,7 +133,7 @@
 
     <div class="form-group">
         <div class="col-xs-3 col-lg-offset-6">
-            <button class="btn btn-block btn-default" ng-click="ctrl.reset()">Prrevious</button>
+            <button class="btn btn-block btn-default" ng-click="ctrl.reset()">Previous</button>
         </div>
         <div class="col-xs-3">
             <button class="btn btn-block btn-primary" ng-click="ctrl.submit()">Next</button>
