--- a/src/main/webapp/source/scripts/modules/upload/components/music-general-information-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-general-information-form.template.html
@@ -55,7 +55,7 @@
          ng-class="{ 'has-success': ctrl.generalForm.beatRate.$valid && ctrl.generalForm.$submitted,
                      'has-error': ctrl.generalForm.beatRate.$invalid && ctrl.generalForm.$submitted }">
         <label for="beat-rate" class="col-xs-2">
-            Beat Rate:
+            Beat Rate/minute:
         </label>
         <div class="col-xs-10">
             <input type="number" name="beatRate" class="form-control" id="beat-rate"
@@ -75,6 +75,17 @@
             </div>
         </div>
     </div>
+
+    <div class="form-group has-feedback">
+    <label class="col-xs-2">
+        Question:
+    </label>
+
+        <label class="radio-inline"><input type="radio" name="optradio">Yes</label>
+        <label class="radio-inline"><input type="radio" name="optradio"> No</label>
+
+        </div>
+
 
     <div class="form-group has-feedback"
          ng-class="{ 'has-success': ctrl.generalForm.primaryGenre.$valid && ctrl.generalForm.$submitted,
