--- a/src/main/webapp/source/scripts/modules/shared/components/scrollable-agreement.template.html
+++ b/src/main/webapp/source/scripts/modules/shared/components/scrollable-agreement.template.html
@@ -1,6 +1,6 @@
 <div class="agreement">
     <div class="agreement__document" ng-transclude></div>
-    <div class="agreement__confirmation">
+    <div class="text-center">
         <label>
             <div class="agreement__checkbox-wrapper"uib-tooltip="Please, read the agreement!"
                  tooltip-placement="top"
