--- a/src/main/webapp/source/scripts/modules/upload/components/music-agreement-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-agreement-form.template.html
@@ -1,4 +1,5 @@
-<div>
+<form class="form-horizontal form-tab" novalidate>
+    <legend></legend>
     <mll-scrollable-agreement on-agree="ctrl.validate(isChecked)">
         <h3>Agreement</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris bibendum quis mi eu luctus. Phasellus posuere ultricies arcu a elementum. Duis et sodales neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec at eleifend leo. Praesent elementum a ex nec bibendum. Etiam porta nec nisl ac interdum. Quisque sed dolor non metus blandit mollis. Nunc scelerisque urna vitae quam egestas dictum. Integer malesuada ante eget diam scelerisque blandit. Ut sed purus efficitur, viverra eros eget, efficitur justo. Suspendisse id libero sagittis, rhoncus leo fringilla, vulputate felis.
@@ -23,4 +24,4 @@
             <button class="btn btn-block btn-primary" ng-click="ctrl.submit()">Next</button>
         </div>
     </div>
-</div>
+</form>
