--- a/src/main/webapp/source/scripts/modules/upload/components/music-general-information-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-general-information-form.template.html
@@ -1,4 +1,4 @@
-<form name="ctrl.generalForm" class="form-horizontal" novalidate>
+<form name="ctrl.generalForm" class="form-horizontal form-tab" novalidate>
     <legend>General Information</legend>
     <div class="form-group has-feedback"
          ng-class="{ 'has-success': ctrl.generalForm.title.$valid && ctrl.generalForm.$submitted,
