--- a/src/main/webapp/source/scripts/modules/upload/components/music-sound-information-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-sound-information-form.template.html
@@ -1,4 +1,4 @@
-<form name="ctrl.soundForm" class="form-horizontal" novalidate>
+<form name="ctrl.soundForm" class="form-horizontal form-tab" novalidate>
     <legend>Sound Recording Ownership Information</legend>
     <div ng-repeat="soundOwner in ctrl.data.soundOwners">
         <ng-form name="masterForm">
