--- a/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
@@ -1,19 +1,25 @@
-<div>
-    <mll-file-selector formats="ctrl.formats" on-select-hdd="ctrl.selectHDD(file)"
-                       on-select-dropbox="ctrl.selectDropbox(file)"></mll-file-selector>
+<form class="form-horizontal form-tab" novalidate>
+    <legend></legend>
+    <div class="container">
+        <div>
+            <mll-file-selector formats="ctrl.formats" on-select-hdd="ctrl.selectHdd(file)"
+                               on-select-dropbox="ctrl.selectDropbox(file)"></mll-file-selector>
 
-    <div class="alert alert-danger" role="alert" ng-show="ctrl.form.invalid && ctrl.form.submitted">
-        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-        <span ng-show="ctrl.form.errors.required">
-            Please, select a file!
-        </span>
-        <span ng-show="ctrl.form.errors.size">
-            Please, select a file which is less than 10MB, if you decided to chose it from Hard Drive!
-        </span>
-        <span ng-show="ctrl.form.errors.format">
-            Please, select a file which has appropriate format, if you decided to chose it from Hard Drive!
-        </span>
+            <div class="alert alert-danger" role="alert" ng-show="ctrl.form.invalid && ctrl.form.submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span ng-show="ctrl.form.errors.required">
+                    Please, select a file!
+                </span>
+                <span ng-show="ctrl.form.errors.size">
+                    Please, select a file which is less than 10MB, if you decided to chose it from Hard Drive!
+                </span>
+                <span ng-show="ctrl.form.errors.format">
+                    Please, select a file which has appropriate format, if you decided to chose it from Hard Drive!
+                </span>
+            </div>
+        </div>
     </div>
+
     <div class="form-group">
         <div class="col-xs-3 col-xs-offset-6">
             <button class="btn btn-block btn-default" ng-click="ctrl.reset()">Previous</button>
@@ -22,4 +28,4 @@
             <button class="btn btn-block btn-primary" ng-click="ctrl.submit()">Next</button>
         </div>
     </div>
-</div>
+</form>
