Upload component is refactored;

--- a/src/main/webapp/source/scripts/modules/picker/components/file-selector.template.html
+++ b/src/main/webapp/source/scripts/modules/picker/components/file-selector.template.html
@@ -1,7 +1,7 @@
 <div>
-    <mll-hdd-file-reader on-select="ctrl.selectHdd(file)"></mll-hdd-file-reader>
+    <mll-hdd-file-reader on-select="ctrl.selectHdd(fileInformation)"></mll-hdd-file-reader>
 
-    <mll-dropbox-file-reader formats="ctrl.formats" on-select="ctrl.selectDropbox(file)"></mll-dropbox-file-reader>
+    <mll-dropbox-file-reader formats="ctrl.formats" on-select="ctrl.selectDropbox(fileInformation)"></mll-dropbox-file-reader>
 
     <div class="form-group">
         <input typ="text" class="form-control" ng-model="ctrl.selectedFile" placeholder="Selected File..." disabled>
