--- a/src/main/webapp/source/scripts/modules/upload/components/music-owner-information-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-owner-information-form.template.html
@@ -123,9 +123,9 @@
     <hr/>
 
     <div class="form-group">
-        <label for="pbo" class="col-xs-3">PRO</label>
+        <label for="pro" class="col-xs-3">PRO</label>
         <div class="col-xs-9">
-            <input type="text" class="form-control" name="pbo" id="pbo" ng-model="ctrl.data.pbo">
+            <input type="text" class="form-control" name="pbo" id="pro" ng-model="ctrl.data.pro">
         </div>
     </div>
 
