--- a/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
@@ -5,7 +5,7 @@
             <mll-file-selector formats="ctrl.formats" on-select-hdd="ctrl.selectHdd(fileInformation)"
                                on-select-dropbox="ctrl.selectDropbox(fileInformation)"></mll-file-selector>
 
-            <div class="alert alert-danger" role="alert" ng-show="ctrl.form.invalid && ctrl.form.submitted">
+            <div class=" form-group alert alert-danger" role="alert" ng-show="ctrl.form.invalid && ctrl.form.submitted">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                 <span ng-show="ctrl.form.errors.required">
                     Please, select a file!
