--- a/src/main/webapp/source/scripts/components/app.template.html
+++ b/src/main/webapp/source/scripts/components/app.template.html
@@ -1,13 +1,21 @@
 <div class="app">
     <mll-header nav-links="ctrl.navigationLinks" home-link="ctrl.homeLink"></mll-header>
     <main class="app__main">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div>
-
-                    <mll-music-file-uploader></mll-music-file-uploader>
-
+                <div class="col-sm-3 col-sm-offset-1">
+                    <div ui-view="left"></div>
                 </div>
+                <div class="col-sm-4">
+                    <div ui-view="center"></div>
+                </div>
+                <div class="col-sm-3">
+                    <div ui-view="right"></div>
+                </div>
+
+                <!--<div>-->
+                    <!--<mll-music-file-uploader></mll-music-file-uploader>-->
+                <!--</div>-->
             </div>
 
         </div>
