--- a/src/main/webapp/source/scripts/modules/registration/components/user-registration-form.template.html
+++ b/src/main/webapp/source/scripts/modules/registration/components/user-registration-form.template.html
@@ -1,27 +1,28 @@
 <form name="ctrl.registerForm" class="form-horizontal form-tab" novalidate>
-    <legend>General Information</legend>
+    <legend>Registration</legend>
+    <hr/>
     <div class="form-group has-feedback"
-         ng-class="{ 'has-success': ctrl.registerForm.title.$valid && ctrl.registerForm.$submitted,
-                     'has-error': ctrl.registerForm.title.$invalid && ctrl.registerForm.$submitted }">
-        <label for="register-title" class="col-xs-2">
+         ng-class="{ 'has-success': ctrl.registerForm.firstname.$valid && ctrl.registerForm.$submitted,
+                     'has-error': ctrl.registerForm.firstname.$invalid && ctrl.registerForm.$submitted }">
+        <label for="first-name" class="col-xs-2">
             First Name:
         </label>
         <div class="col-xs-10">
-            <input type="text" name="title" class="form-control" id="register-title"
-                   ng-model="ctrl.data.title" required autofocus />
+            <input type="text" name="firstname" class="form-control" id="first-name"
+                   ng-model="ctrl.data.firstname" required autofocus />
             <div class="alert alert-danger" role="alert"
-                 ng-show="ctrl.registerForm.title.$invalid && ctrl.registerForm.$submitted">
+                 ng-show="ctrl.registerForm.firstname.$invalid && ctrl.registerForm.$submitted">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                <span ng-show="ctrl.registerForm.title.$error.required">
+                <span ng-show="ctrl.registerForm.firstname.$error.required">
                         please provide your first name!!
                 </span>
             </div>
         </div>
     </div>
 
-    <hr/>
 
 
+    <!----------Last Name----------->
     <div class="form-group has-feedback"
          ng-class="{ 'has-success': ctrl.registerForm.lastname.$valid && ctrl.registerForm.$submitted,
                      'has-error': ctrl.registerForm.lastname.$invalid && ctrl.registerForm.$submitted }">
@@ -30,7 +31,7 @@
         </label>
         <div class="col-xs-10">
             <input type="text" name="lastname" class="form-control" id="last-name"
-                   ng-model="ctrl.data.lastname" min="0" max="320" required />
+                   ng-model="ctrl.data.lastname"  required />
             <div class="alert alert-danger" role="alert"
                  ng-show="ctrl.registerForm.lastname.$invalid && ctrl.registerForm.$submitted">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -41,11 +42,202 @@
         </div>
     </div>
 
+    <!------USER NAME----->
+    <div class="form-group has-feedback"
+         ng-class="{ 'has-success': ctrl.registerForm.username.$valid && ctrl.registerForm.$submitted,
+                     'has-error': ctrl.registerForm.username.$invalid && ctrl.registerForm.$submitted }">
+        <label for="user-name" class="col-xs-2">
+           Username:
+        </label>
+        <div class="col-xs-10">
+            <input type="text" name="username" class="form-control" id="user-name"
+                   ng-model="ctrl.data.username"  required />
+            <div class="alert alert-danger" role="alert"
+                 ng-show="ctrl.registerForm.username.$invalid && ctrl.registerForm.$submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span ng-show="ctrl.registerForm.username.$error.required">
+                    Username is mandatory!
+                </span>
+            </div>
+        </div>
+    </div>
 
 
+<!-----------Email id------------>
+    <div class="form-group has-feedback"
+         ng-class="{ 'has-success': ctrl.registerForm.email.$valid && ctrl.registerForm.$submitted,
+                     'has-error': ctrl.registerForm.email.$invalid && ctrl.registerForm.$submitted }">
+        <label for="email-id" class="col-xs-2">
+            Email Id:
+        </label>
+        <div class="col-xs-10">
+            <input type="email" name="email" class="form-control" id="email-id"
+                   ng-model="ctrl.data.email"  required />
+            <div class="alert alert-danger" role="alert"
+                 ng-show="ctrl.registerForm.email.$invalid && ctrl.registerForm.$submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span ng-show="ctrl.registerForm.email.$error.required">
+                    Email id is mandatory!
+                </span>
+            </div>
+        </div>
+    </div>
 
-        <div class="col-xs-3">
-            <button class="btn btn-block btn-primary" ng-click="ctrl.submit()">Next</button>
+    <!------------------Password---------------------->
+
+    <div class="form-group has-feedback"
+         ng-class="{ 'has-success': ctrl.registerForm.password.$valid && ctrl.registerForm.$submitted,
+                     'has-error': ctrl.registerForm.password.$invalid && ctrl.registerForm.$submitted }">
+        <label for="pass" class="col-xs-2">
+            Password:
+        </label>
+        <div class="col-xs-10">
+            <input type="password" name="password" class="form-control" id="pass"
+                   ng-model="ctrl.data.password"  required />
+            <div class="alert alert-danger" role="alert"
+                 ng-show="ctrl.registerForm.password.$invalid && ctrl.registerForm.$submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span ng-show="ctrl.registerForm.password.$error.required">
+                    Password must  have characters
+                    more than 6 and less than 10 with at least
+                    one uppercase character,one
+                    special character and one number
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <!-----------College------------>
+
+    <div class="form-group has-feedback"
+         ng-class="{ 'has-success': ctrl.registerForm.college.$valid && ctrl.registerForm.$submitted,
+                     'has-error': ctrl.registerForm.college.$invalid && ctrl.registerForm.$submitted }">
+        <label for="college" class="col-xs-2">
+            College
+        </label>
+        <div class="col-xs-10">
+            <input type="text" name="college" class="form-control" id="college"
+                   ng-model="ctrl.data.college"  required />
+            <div class="alert alert-danger" role="alert"
+                 ng-show="ctrl.registerForm.college.$invalid && ctrl.registerForm.$submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span ng-show="ctrl.registerForm.college.$error.required">
+                Please provide your college name!
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <!----------------graduate level---------------->
+
+    <div class="form-group has-feedback"
+         ng-class="{ 'has-success': ctrl.registerForm.level.$valid && ctrl.registerForm.$submitted,
+                     'has-error': ctrl.registerForm.level.$invalid && ctrl.registerForm.$submitted }">
+        <label for="level" class="col-xs-2">
+            Level
+        </label>
+
+        <div class="col-xs-10">
+            <input type="text" name="level" class="form-control" id="level"
+                   ng-model="ctrl.data.level"  required />
+            <div class="alert alert-danger" role="alert"
+                 ng-show="ctrl.registerForm.level.$invalid && ctrl.registerForm.$submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span ng-show="ctrl.registerForm.level.$error.required">
+                Please provide your graduate level!
+                </span>
+            </div>
+        </div>
+    </div>
+
+
+<!-------------Age------------>
+
+    <div class="form-group has-feedback"
+         ng-class="{ 'has-success': ctrl.registerForm.age.$valid && ctrl.registerForm.$submitted,
+                     'has-error': ctrl.registerForm.age.$invalid && ctrl.registerForm.$submitted }">
+        <label for="age" class="col-xs-2">
+            Age
+        </label>
+        <div class="col-xs-10">
+            <input type="number" name="age" class="form-control" id="age"
+                   ng-model="ctrl.data.age"  required />
+            <div class="alert alert-danger" role="alert"
+                 ng-show="ctrl.registerForm.age.$invalid && ctrl.registerForm.$submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span ng-show="ctrl.registerForm.age.$error.required">
+                Please provide your age!
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <!---------------Preference genre---------------->
+
+    <div class="form-group has-feedback"
+         ng-class="{ 'has-success': ctrl.registerForm.oneGenre.$valid && ctrl.registerForm.$submitted,
+                     'has-error': ctrl.registerForm.oneGenre.$invalid && ctrl.registerForm.$submitted }">
+        <label class="col-xs-2">
+            1st Genre Preference:
+        </label>
+        <div class="col-xs-10">
+            <select name="oneGenre" class="form-control" ng-model="ctrl.data.oneGenre"
+                    ng-options="genre for genre in ctrl.genres"
+                    ng-change="ctrl.selectGenre(genre)"required>
+                <option value="">Select Genre...</option>
+            </select>
+            <div class="alert alert-danger" role="alert"
+                 ng-show="ctrl.registerForm.oneGenre.$invalid && ctrl.registerForm.$submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span ng-show="ctrl.registerForm.oneGenre.$error.required">
+                    Please, select a genre!
+                </span>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="form-group" ng-show="ctrl.data.oneGenre">
+        <label class="col-xs-2">
+            2nd Preference:
+        </label>
+        <div class="col-xs-10">
+            <select name="twoGenre" class="form-control" ng-model="ctrl.data.twoGenre"
+                    ng-options="genre for genre in ctrl.genres">
+                <option value="">Select Genre...</option>
+            </select>
+        </div>
+    </div>
+
+
+<!--------------Gender--------------------->
+    <div class="form-group has-feedback"
+         ng-class="{ 'has-success': ctrl.registerForm.gender.$valid && ctrl.registerForm.$submitted,
+                     'has-error': ctrl.registerForm.gender.$invalid && ctrl.registerForm.$submitted }">
+        <label class="col-xs-2">
+            Gender
+        </label>
+        <div class="col-xs-10">
+            <select name="gender" class="form-control" ng-model="ctrl.data.gender"
+                    ng-options="gender.label for gender in ctrl.genders track by gender.id"
+                    ng-change="ctrl.selectGender"required>
+
+                <option value="">Select Gender...</option>
+            </select>
+            option: {{ctrl.selectGender}}
+            <div class="alert alert-danger" role="alert"
+                 ng-show="ctrl.registerForm.gender.$invalid && ctrl.registerForm.$submitted">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span ng-show="ctrl.registerForm.gender.$error.required">
+                    Please, select a gender!
+                </span>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-xs-3">
+            <button class="btn btn-block btn-primary" ng-click="ctrl.submit()">Register</button>
         </div>
     </div>
 </form>
