--- a/src/main/webapp/source/scripts/modules/header/components/header.template.html
+++ b/src/main/webapp/source/scripts/modules/header/components/header.template.html
@@ -15,7 +15,8 @@
             </div>
 
             <div class="collapse navbar-collapse" id="search-bar">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav"
+                    ng-show="ctrl.authService.details.isAuth && ctrl.authService.details.permissions.browse">
                     <li ng-repeat="link in ctrl.navLinks">
                         <a ui-sref="{{link.href}}">
                             <span ng-bind="link.text"></span>
@@ -25,13 +26,13 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li ng-show="!ctrl.authService.details.isAuthenticated">
+                    <li ng-show="!ctrl.authService.details.isAuth">
                         <a ui-sref="{{ctrl.loginLink.href}}">
                             <span ng-bind="ctrl.loginLink.text"></span>
                         </a>
                     </li>
 
-                    <li ng-show="ctrl.authService.details.isAuthenticated">
+                    <li ng-show="ctrl.authService.details.isAuth">
                         <a ui-sref="{{ctrl.logoutLink.href}}">
                             <span ng-bind="ctrl.logoutLink.text"></span>
                         </a>
