--- a/src/main/webapp/source/scripts/modules/header/components/header.template.html
+++ b/src/main/webapp/source/scripts/modules/header/components/header.template.html
@@ -16,14 +16,15 @@
 
             <div class="collapse navbar-collapse" id="search-bar">
                 <ul class="nav navbar-nav"
-                    ng-show="ctrl.authService.details.isAuth && ctrl.authService.details.permissions.browse">
+                    ng-show="ctrl.authService.details.isAuth && ctrl.authService.details.data.permissions.browse">
                     <li ng-repeat="link in ctrl.navLinks">
                         <a ui-sref="{{link.href}}">
                             <span ng-bind="link.text"></span>
                         </a>
                     </li>
-
                 </ul>
+
+                {{ }}
 
                 <ul class="nav navbar-nav navbar-right">
                     <li ng-show="!ctrl.authService.details.isAuth">
@@ -33,7 +34,7 @@
                     </li>
 
                     <li ng-show="ctrl.authService.details.isAuth">
-                        <a ui-sref="{{ctrl.logoutLink.href}}">
+                        <a ng-click="ctrl.logout()">
                             <span ng-bind="ctrl.logoutLink.text"></span>
                         </a>
                     </li>
