--- a/src/main/webapp/source/scripts/modules/header/components/header.template.html
+++ b/src/main/webapp/source/scripts/modules/header/components/header.template.html
@@ -34,7 +34,7 @@
                     </li>
 
                     <li ng-show="ctrl.authService.details.isAuth">
-                        <a ng-click="ctrl.logout()">
+                        <a href ng-click="ctrl.logout()">
                             <span ng-bind="ctrl.logoutLink.text"></span>
                         </a>
                     </li>
