Invite Generation Fixes

--- a/src/main/webapp/source/scripts/modules/home/views/user-profile-right.view.html
+++ b/src/main/webapp/source/scripts/modules/home/views/user-profile-right.view.html
@@ -1,3 +1,3 @@
-<div class="container">
-    <mll-invite-form></mll-invite-form>
+<div>
+    <mll-invite-form user-id="{{ctrl.userId}}"></mll-invite-form>
 </div>
