--- a/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
+++ b/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
@@ -1,29 +1,41 @@
 <div>
-    <div class="row well">
-        <h2 class="coll-xs-12">Invite</h2>
+    <div class="coll-xs-10 col-xs-offset-1 well">
+        <h2 class="text-center">Invite</h2>
     </div>
 
-    <div class="row well">
+    <div class="coll-xs-10 col-xs-offset-1 well">
         <form name="ctrl.form" class="form-horizontal" novalidate>
             <div class="form-group has-feedback"
-                 ng-class="{ 'has-success': ctrl.registerForm.people.$valid && ctrl.registerForm.$submitted,
-                             'has-error': ctrl.registerForm.people.$invalid && ctrl.registerForm.$submitted }">
-                <label class="col-xs-2">
-                    People Type:
-                </label>
-                <div class="col-xs-18">
-                    <select name="people" class="form-control" ng-model="ctrl.data.people"
-                            ng-options="user.label for users in ctrl.users track by gender.id"
-                            ng-change="ctrl.selectUser"required>
-
-                        <option value="">Select a user...</option>
+                 ng-class="{ 'has-success': ctrl.form.type.$valid && ctrl.form.$submitted,
+                             'has-error': ctrl.form.type.$invalid && ctrl.form.$submitted }">
+                <div class="col-xs-12">
+                    <select name="type" class="form-control" ng-model="ctrl.data.type"
+                            ng-options="type.value as type.label for type in ctrl.types" required>
+                        <option value="">Select a Category...</option>
                     </select>
-
                     <div class="alert alert-danger" role="alert"
-                         ng-show="ctrl.registerForm.people.$invalid && ctrl.registerForm.$submitted">
+                         ng-show="ctrl.form.type.$invalid && ctrl.form.$submitted">
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                        <span ng-show="ctrl.registerForm.people.$error.required">
-                            Please, select a user!
+                        <span ng-show="ctrl.form.type.$error.required">
+                            Please, select a user categry to invite!
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group has-feedback"
+                 ng-class="{ 'has-success': ctrl.form.email.$valid && ctrl.form.$submitted,
+                             'has-error': ctrl.form.email.$invalid && ctrl.form.$submitted }">
+                <div class="col-xs-12">
+                    <input type="email" name="email" ng-model="ctrl.data.email" class="form-control" required>
+                    <div class="alert alert-danger" role="alert"
+                         ng-show="ctrl.form.type.$invalid && ctrl.form.$submitted">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                        <span ng-show="ctrl.form.email.$error.required">
+                            Please, provide an email address!
+                        </span>
+                        <span ng-show="ctrl.form.email.$error.email">
+                            Please, provide a valid email address!
                         </span>
                     </div>
                 </div>
