--- a/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
+++ b/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
@@ -1,6 +1,6 @@
 <div>
     <div class="coll-xs-10 col-xs-offset-1 well">
-        <h2 class="text-center">Invite</h2>
+        <h3 class="text-center no-margin">Invite</h3>
     </div>
 
     <div class="coll-xs-10 col-xs-offset-1 well">
