Invite Generation Fixes

--- a/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
+++ b/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
@@ -48,7 +48,8 @@
                 <div class="col-xs-12">
                     <button class="btn btn-block btn-primary" ng-click="ctrl.invite()"
                             uib-tooltip="{{ctrl.message}}" tooltip-is-open="ctrl.isOpen"
-                            tooltip-placement="bottom" tooltip-trigger="none">
+                            tooltip-placement="bottom" tooltip-trigger="none"
+                            tooltip-class="{{ctrl.isGenerated ? 'tooltip-alert-success' : 'tooltip-alert-error'}}">
                         Invite
                     </button>
                 </div>
