Musician Registration Draft

--- a/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
+++ b/src/main/webapp/source/scripts/modules/home/components/invite-form.template.html
@@ -33,7 +33,7 @@
                                placeholder="Email Address..." required></div>
 
                     <div class="alert alert-danger" role="alert"
-                         ng-show="ctrl.form.type.$invalid && ctrl.form.$submitted">
+                         ng-show="ctrl.form.email.$invalid && ctrl.form.$submitted">
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                         <span ng-show="ctrl.form.email.$error.required">
                             Please, provide an email address!
