--- a/src/main/webapp/source/scripts/modules/registration/views/user-registration.view.html
+++ b/src/main/webapp/source/scripts/modules/registration/views/user-registration.view.html
@@ -1,3 +1,3 @@
 <div>
-    <mll-user-registration-form></mll-user-registration-form>
+    <mll-user-registration-form invite-token="{{ctrl.data.inviteToken}}"></mll-user-registration-form>
 </div>
