--- a/src/main/webapp/source/scripts/modules/registration/views/musician-registration.view.html
+++ b/src/main/webapp/source/scripts/modules/registration/views/musician-registration.view.html
@@ -1,3 +1,3 @@
 <div>
-    <mll-musician-registration-form> invite-token="{{ctrl.data.inviteToken}}"></mll-musician-registration-form>
+    <mll-musician-registration-form invite-token="{{ctrl.data.inviteToken}}"></mll-musician-registration-form>
 </div>
