--- a/src/main/webapp/source/scripts/modules/registration/components/musician-registration-form.template.html
+++ b/src/main/webapp/source/scripts/modules/registration/components/musician-registration-form.template.html
@@ -3,7 +3,7 @@
         <h3 class="text-center no-margin">Registration</h3>
     </div>
 
-    <form name="registrationForm" class="form-horizontal" novalidate>
+    <form name="ctrl.registrationForm" class="form-horizontal" novalidate>
         <div class="form-group has-feedback"
              ng-class="{ 'has-success': ctrl.registrationForm.username.$valid && ctrl.registrationForm.$submitted,
                          'has-error': ctrl.registrationForm.username.$invalid && ctrl.registrationForm.$submitted }">
@@ -98,20 +98,20 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="row">
-                <div class="col-xs-10 col-xs-offset-1">
-                    <div class="alert alert-danger" role="alert" ng-show="ctrl.loginForm.$serverError">
-                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                        <span ng-bind="ctrl.errorMessage"></span>
-                    </div>
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+                <div class="alert alert-danger" role="alert" ng-show="ctrl.loginForm.$serverError">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span ng-bind="ctrl.errorMessage"></span>
                 </div>
             </div>
+        </div>
 
-            <div class="row">
-                <div class="col-xs-10 col-xs-offset-1">
-                    <button  class="btn btn-primary btn-block" ng-click="ctrl.register()">Register</button>
-                </div>
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+                <button  class="btn btn-primary btn-block" ng-click="ctrl.register()">Register</button>
             </div>
         </div>
     </form>
