User registration and agreements

--- a/src/main/webapp/source/scripts/modules/upload/components/music-general-information-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-general-information-form.template.html
@@ -84,11 +84,9 @@
         </label>
 
         <label class="radio-inline"><input type="radio" name="agreement"
-                                           ng-change="ctrl.agreement()" ng-model="ctrl.isChecked"
-        >Yes</label>
+                                           ng-model="ctrl.isChecked" value>Yes</label>
         <label class="radio-inline"><input type="radio" name="agreement"
-                                           ng-change="ctrl.agreement()" ng-model="ctrl.isChecked"
-        > No</label>
+                                            ng-model="ctrl.isChecked" ng-value="false"> No</label>
 
 
         <div class="alert alert-danger" role="alert"
