--- a/src/main/webapp/source/scripts/modules/registration/components/user-registration-form.template.html
+++ b/src/main/webapp/source/scripts/modules/registration/components/user-registration-form.template.html
@@ -7,7 +7,7 @@
         <label for="first-name" class="col-xs-2">
             First Name:
         </label>
-        <div class="col-xs-10">
+        <div class="col-xs-8">
             <input type="text" name="firstname" class="form-control" id="first-name"
                    ng-model="ctrl.data.firstname" required autofocus />
             <div class="alert alert-danger" role="alert"
@@ -29,7 +29,7 @@
         <label for="last-name" class="col-xs-2">
            Last name:
         </label>
-        <div class="col-xs-10">
+        <div class="col-xs-8">
             <input type="text" name="lastname" class="form-control" id="last-name"
                    ng-model="ctrl.data.lastname"  required />
             <div class="alert alert-danger" role="alert"
@@ -49,7 +49,7 @@
         <label for="user-name" class="col-xs-2">
            Username:
         </label>
-        <div class="col-xs-10">
+        <div class="col-xs-8">
             <input type="text" name="username" class="form-control" id="user-name"
                    ng-model="ctrl.data.username"  required />
             <div class="alert alert-danger" role="alert"
@@ -70,7 +70,7 @@
         <label for="email-id" class="col-xs-2">
             Email Id:
         </label>
-        <div class="col-xs-10">
+        <div class="col-xs-8">
             <input type="email" name="email" class="form-control" id="email-id"
                    ng-model="ctrl.data.email"  required />
             <div class="alert alert-danger" role="alert"
@@ -91,17 +91,19 @@
         <label for="pass" class="col-xs-2">
             Password:
         </label>
-        <div class="col-xs-10">
+        <div class="col-xs-8">
             <input type="password" name="password" class="form-control" id="pass"
-                   ng-model="ctrl.data.password"  required />
+                   ng-model="ctrl.data.password"  ng-minlength="8" required />
             <div class="alert alert-danger" role="alert"
                  ng-show="ctrl.registerForm.password.$invalid && ctrl.registerForm.$submitted">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                 <span ng-show="ctrl.registerForm.password.$error.required">
-                    Password must  have characters
-                    more than 6 and less than 10 with at least
-                    one uppercase character,one
-                    special character and one number
+                   Please provide a password
+
+                </span>
+
+                <span ng-show="ctrl.registerForm.cpassword.$error.minlength">
+                    Your password must have 8 characters minimum.
                 </span>
             </div>
         </div>
@@ -115,14 +117,17 @@
         <label for="cpass" class="col-xs-2">
           Confirm Password:
         </label>
-        <div class="col-xs-10">
+        <div class="col-xs-5">
             <input type="password" name="cpassword" class="form-control" id="cpass"
-                   ng-model="ctrl.data.cpassword"  required />
+                   ng-model="ctrl.data.cpassword" ng-minlength="8" required />
             <div class="alert alert-danger" role="alert"
                  ng-show="ctrl.registerForm.cpassword.$invalid && ctrl.registerForm.$submitted">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                 <span ng-show="ctrl.registerForm.cpassword.$error.required">
-                    Both the passwords must match
+                   Please confirm the password by entering it again
+                </span>
+                <span ng-show="ctrl.registerForm.cpassword.$error.minlength">
+                    Your password must have 8 characters minimum.
                 </span>
             </div>
         </div>
@@ -133,12 +138,14 @@
     <div class="form-group has-feedback"
          ng-class="{ 'has-success': ctrl.registerForm.college.$valid && ctrl.registerForm.$submitted,
                      'has-error': ctrl.registerForm.college.$invalid && ctrl.registerForm.$submitted }">
-        <label for="college" class="col-xs-2">
+        <label  class="col-xs-2">
             College
         </label>
-        <div class="col-xs-10">
-            <input type="text" name="college" class="form-control" id="college"
-                   ng-model="ctrl.data.college"  required />
+        <div class="col-xs-5">
+            <select name="college" class="form-control" ng-model="ctrl.data.college"
+                    ng-options="college for college in colleges" required>
+                <option value="">Select College...</option>
+            </select>
             <div class="alert alert-danger" role="alert"
                  ng-show="ctrl.registerForm.college.$invalid && ctrl.registerForm.$submitted">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -154,13 +161,16 @@
     <div class="form-group has-feedback"
          ng-class="{ 'has-success': ctrl.registerForm.level.$valid && ctrl.registerForm.$submitted,
                      'has-error': ctrl.registerForm.level.$invalid && ctrl.registerForm.$submitted }">
-        <label for="level" class="col-xs-2">
+        <label  class="col-xs-2">
             Level
         </label>
 
-        <div class="col-xs-10">
-            <input type="text" name="level" class="form-control" id="level"
-                   ng-model="ctrl.data.level"  required />
+        <div class="col-xs-5">
+            <select name="level" class="form-control" ng-model="ctrl.data.level"
+                    ng-options="level for level in levels" required>
+
+                <option value="">Select Level...</option>
+            </select>
             <div class="alert alert-danger" role="alert"
                  ng-show="ctrl.registerForm.level.$invalid && ctrl.registerForm.$submitted">
                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -180,7 +190,7 @@
         <label for="age" class="col-xs-2">
             Age
         </label>
-        <div class="col-xs-10">
+        <div class="col-xs-2">
             <input type="number" name="age" class="form-control" id="age"
                    ng-model="ctrl.data.age"  required />
             <div class="alert alert-danger" role="alert"
@@ -201,7 +211,7 @@
         <label class="col-xs-2">
             1st Genre Preference:
         </label>
-        <div class="col-xs-10">
+        <div class="col-xs-5">
             <select name="oneGenre" class="form-control" ng-model="ctrl.data.oneGenre"
                     ng-options="genre for genre in ctrl.genres"
                     ng-change="ctrl.selectGenre(genre)"required>
@@ -224,7 +234,7 @@
         <label class="col-xs-2">
             2nd Preference:
         </label>
-        <div class="col-xs-10">
+        <div class="col-xs-5">
             <select name="twoGenre" class="form-control" ng-model="ctrl.data.twoGenre"
                     ng-options="genre for genre in ctrl.genres">
                 <option value="">Select Genre...</option>
@@ -240,10 +250,9 @@
         <label class="col-xs-2">
            Gender
         </label>
-        <div class="col-xs-18">
+        <div class="col-xs-5">
             <select name="gender" class="form-control" ng-model="ctrl.data.gender"
-                    ng-options="gender.label for gender in ctrl.genders track by gender.id"
-                    ng-change="ctrl.selectGender"required>
+                    ng-options="gender for gender in genders "required>
 
                 <option value="">Select Gender...</option>
             </select>
