--- a/src/main/webapp/source/scripts/modules/login/components/common-login-form.template.html
+++ b/src/main/webapp/source/scripts/modules/login/components/common-login-form.template.html
@@ -10,7 +10,7 @@
             <div class="col-xs-10 col-xs-offset-1">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                    <input type="email" name="userName" class="form-control" placeholder="Email Address..."
+                    <input type="text" name="userName" class="form-control" placeholder="User Name..."
                            ng-model="ctrl.data.userName" required/>
                 </div>
 
@@ -18,10 +18,7 @@
                      ng-show="ctrl.loginForm.userName.$invalid && ctrl.loginForm.$submitted">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span ng-show="ctrl.loginForm.userName.$error.required">
-                        Please, provide your email address!
-                    </span>
-                    <span ng-show="ctrl.loginForm.userName.$error.email">
-                        Please, provide valid email address!
+                        Please, provide a user name!
                     </span>
                 </div>
             </div>
@@ -50,7 +47,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-10 col-xs-offset-1">
                 <div class="alert alert-danger" role="alert" ng-show="ctrl.loginForm.$serverError">
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span ng-bind="ctrl.errorMessage"></span>
@@ -59,7 +56,7 @@
         </div>
 
         <div class="form-group">
-            <div class="col-xs-12">
+            <div class="col-xs-10 col-xs-offset-1">
                 <button class="btn btn-block btn-primary" ng-click="ctrl.login()">Log In</button>
             </div>
         </div>
